# efa-gda

./: .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  enroot.sh  mpi.sh  srun.sh
cmake/: packages.cmake
src/: CMakeLists.txt  main.cu
src/include/gda/: affinity.h  buffer.h  common.h  efa.h  mpi.h  peer.h  taskset.h
